--- a/style.css
+++ b/style.css
@@ -116,3 +116,8 @@
     font-weight: bold;
 }
 
+.container .profile-box .auto{
+    color: rgb(2, 117, 2);
+    font-weight: bolder;
+    font-size: 30px;
+}
